refactor: ExRateProvider checked exception을 unchecked exception으로 변경
- ExRateProvider 인터페이스에서 IOException throws 제거
- WebApiExRateProvider에서 IOException을 RuntimeException으로 래핑
- 모든 구현체 및 호출부에서 throws 선언 제거
- PaymentService에서 미사용 변수 제거