@@ -1,6 +1,7 @@
 package org.app.tobyspring.exRate;
 
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.app.tobyspring.payment.ExRateProvider;
 import org.springframework.stereotype.Component;
@@ -10,27 +11,44 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.math.BigDecimal;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.stream.Collectors;
 
 public class WebApiExRateProvider implements ExRateProvider {
     @Override
-    public BigDecimal getExRate(String currency) throws IOException {
-        final String response;
+    public BigDecimal getExRate(String currency) {
+        String url = "https://open.er-api.com/v6/latest/" + currency;
 
-        URL url = new URL("https://open.er-api.com/v6/latest/" + currency);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-
-        try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
-            response = bufferedReader.lines().collect(Collectors.joining());
+        URI uri;
+        try {
+            uri = new URI(url);
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
         }
 
-        ObjectMapper mapper = new ObjectMapper();
+        HttpURLConnection connection;
+        try {
+            connection = (HttpURLConnection) uri.toURL().openConnection();
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
 
-        ExRateData data = mapper.readValue(response, ExRateData.class);
+        String response;
+        try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+            response = bufferedReader.lines().collect(Collectors.joining());
+        } catch(IOException e) {
+            throw new RuntimeException(e);
+        }
 
-        System.out.println("API CALL RESPONSE: " + data.rates().get("KRW"));
+        try {
+            ObjectMapper mapper = new ObjectMapper();
+            ExRateData data = mapper.readValue(response, ExRateData.class);
+            return data.rates().get("KRW");
+        } catch (JsonProcessingException e) {
+            throw new RuntimeException(e);
+        }
 
-        return data.rates().get("KRW");
     }
 }
